--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,13 @@
 			<artifactId>line-bot-servlet</artifactId>
 			<version>4.3.0</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+			<version>4.8</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
